--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,8 @@
     <string name="off_status">Status not displayed</string>
     <string name="QA_improtant">How Important for you?</string>
     <string name="ok_QA">Confirm</string>
+    <string name="next_QA">Next</string>
+    <string name="previous_QA">Previous</string>
     <string name="QA_choice1">A little important</string>
     <string name="QA_choice2">Absolutely important</string>
     <string name="QA_choice3">Important</string>
