Update official version 2 of RegisterQA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,10 @@
     <string name="QA_choice3">Important</string>
     <string name="QA_choice4">Very Important</string>
     <string name="QA_choice5">Serious Important!</string>
+    <string name="questionActivityTitle">Questions</string>
+    <string name="questionActivitySubTitle">Answer the questions for better matching.</string>
+
+
 
     <string-array name="shopping_item">
         <item>จัดดอกไม้-ทำสวน</item>
