--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -168,6 +168,9 @@
     <string name="QA_choice3">สำคัญ</string>
     <string name="QA_choice4">สำคัญมาก</string>
     <string name="QA_choice5">เป็นเรื่องคอขาดบาดตาย</string>
+    <string name="questionActivityTitle">คำถาม</string>
+    <string name="questionActivitySubTitle">ตอบคำถามของเราเพื่อการจับคู่กับคนที่เข้ากันกับคุณ</string>
+
 
 
 
