--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,7 +171,14 @@
     <string name="QA_choice5">Serious Important!</string>
     <string name="questionActivityTitle">Questions</string>
     <string name="questionActivitySubTitle">Answer the questions for better matching.</string>
-
+    <string name="dessert_vip">Dessert VIP</string>
+    <string name="LoadingAds">Loading ads</string>
+    <string name="match">Match</string>
+    <string name="tryAgian">ลองอีกครั้ง</string>
+    <string name="aleartGPS">คุณต้องอนุญาตให้ระบบเข้าถึงตำแหน่งที่ตั้งเพื่อใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง</string>
+    <string name="apologize">ขออภัย</string>
+    <string name="aleartGPSopen">คุณต้องเปิด GPS เพื่อเข้าใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง</string>
+    <string name="feedback">Feedback</string>
 
 
     <string-array name="shopping_item">
