ใช้ ขนาด ใน dimen นพ

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -257,5 +257,6 @@
     <string name="tryAgian">ลองอีกครั้ง</string>
     <string name="aleartGPSopen">คุณต้องเปิด GPS เพื่อเข้าใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง</string>
     <string name="feedback">Feedback</string>
+    <string name="blacklist">บีญชีของคุณถูกระงับการใช้งาน</string>
 
 </resources>
