--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,7 @@
     <string name="tryAgian">ลองอีกครั้ง</string>
     <string name="aleartGPSopen">คุณต้องเปิด GPS เพื่อเข้าใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง</string>
     <string name="feedback">Feedback</string>
+    <string name="blacklist">บีญชีของคุณถูกระงับการใช้งาน</string>
 
 
     <string-array name="shopping_item">
