--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,6 +165,8 @@
     <string name="aleartGPSopen">คุณต้องเปิด GPS เพื่อเข้าใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง</string>
     <string name="feedback">Feedback</string>
     <string name="blacklist">บีญชีของคุณถูกระงับการใช้งาน</string>
+    <string name="record">Press to Record</string>
+    <string name="uploading">Uploading....</string>
 
 
     <string-array name="shopping_item">
