Modified question_dialog DialogFragment.kt

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -160,6 +160,7 @@
     <string name="questionActivitySubTitle">ตอบคำถามของเราเพื่อการจับคู่กับคนที่เข้ากันกับคุณ</string>
     <string name="record">กดเพื่ออีดเสียง</string>
     <string name="uploading">กำลังอัปโหลด</string>
+    <string name="selected_questions">กรุณาเลือกคำตอบและตอบให้ครบถ้วน</string>
 
 
 
