Add dialog out of question_ask_dialog.xml

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -161,8 +161,12 @@
     <string name="record">กดเพื่ออีดเสียง</string>
     <string name="uploading">กำลังอัปโหลด</string>
     <string name="selected_questions">กรุณาเลือกคำตอบและตอบให้ครบถ้วน</string>
-    <string name="title_askQuestion">ตอบคำถาม</string>
+    <string name="title_askQuestion">ตอบคำถามสิ</string>
     <string name="body_askQuestion">เพื่อเพิ่มโอกาสการจับคู่และจำนวนการกดไลค์ของคุณกรุณาตอบคำถามของทางแอปพลิเคชัน</string>
+    <string name="out_of_quota">โควต้าวันนี้ของคุณหมดแล้ว</string>
+    <string name="out_of_questions">ขอโทษคำถามของเราหมดแล้ว</string>
+    <string name="out_of_questions_description">คำถามหมดแล้ว</string>
+
 
 
 
