--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,8 +168,11 @@
     <string name="record">Press to Record</string>
     <string name="uploading">Uploading....</string>
     <string name="selected_questions">Please selected the answer</string>
-    <string name="title_askQuestion">Answer questions !!</string>
+    <string name="title_askQuestion">Answer questions</string>
     <string name="body_askQuestion">Answer the algorithm matching for increase your quota today</string>
+    <string name="out_of_quota">Out of today quota !!</string>
+    <string name="out_of_questions">Sorry, Out of question !!</string>
+    <string name="out_of_questions_description">Out of question</string>
 
 
     <string-array name="shopping_item">
